# playground

./: .gitattributes  date.md  pyproject.toml
.github/workflows/: build.yaml  date-writer.yaml  main.yaml
docs/: sample-with-css-inline.md  sample-with-css-link.md  sample.css  sample.md
dummy_python_project/: __init__.py
