[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["mtkennerly <mtkennerly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
