[tool.poetry]
name = "dummy-python-project"
version = "0.0.999"
description = "Some special character like Ø, and Ř in UTF-8 encoding."
authors = []

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
